--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,11 +1,19 @@
 <div class="table">
   @for (row of tableRows; track $index) {
-  <div class="table__row">{{row.rowNumber}}
+  <div class="table__row">
+    <p class="table__row-number">{{row.rowNumber}}</p>
     @for (tile of row.tiles; track $index) {
     @if (
     tile.element
     ) {
-    <div class="table__tile">{{tile.element.name}}</div>
+    <div class="table__tile">
+      <span class="table__position">{{tile.element.position}}</span>
+      <span class="table__symbol">{{tile.element.symbol}}</span>
+      @if (!(isMobile$ | async)) {
+      <span class="table__name">{{tile.element.name}}</span>
+      <span class="table__weight">{{tile.element.weight}}</span>
+      }
+    </div>
     }
     @else {
     <div class="table__tile table__tile--empty"></div>
