--- a/src/app/components/table/edit-tile-dialog/edit-tile-dialog/edit-tile-dialog.component.html
+++ b/src/app/components/table/edit-tile-dialog/edit-tile-dialog/edit-tile-dialog.component.html
@@ -1,1 +1,23 @@
-<p>edit-tile-dialog works!</p>
+<h2 mat-dialog-title>Edit {{elementData.name}}</h2>
+<mat-dialog-content [formGroup]="dialogForm">
+  <mat-form-field>
+    <mat-label>Position</mat-label>
+    <input matInput formControlName="position" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Symbol</mat-label>
+    <input matInput formControlName="symbol" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Name</mat-label>
+    <input matInput formControlName="name" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Weight</mat-label>
+    <input matInput formControlName="weight" />
+  </mat-form-field>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button [mat-dialog-close]>Cancel</button>
+  <button mat-button (click)="onConfirm()" cdkFocusInitial>Confirm</button>
+</mat-dialog-actions>
