--- a/src/app/components/table/edit-tile-dialog/edit-tile-dialog/edit-tile-dialog.component.html
+++ b/src/app/components/table/edit-tile-dialog/edit-tile-dialog/edit-tile-dialog.component.html
@@ -2,19 +2,31 @@
 <mat-dialog-content class="dialog" [formGroup]="dialogForm">
   <mat-form-field>
     <mat-label>Position</mat-label>
-    <input matInput formControlName="position" maxlength="3"/>
+    <input matInput formControlName="position" maxlength="3" required />
+    @if (!dialogForm.controls.position.valid) {
+    <mat-error>Position is invalid!</mat-error>
+    }
   </mat-form-field>
   <mat-form-field>
     <mat-label>Symbol</mat-label>
-    <input matInput formControlName="symbol" maxlength="3"/>
+    <input matInput formControlName="symbol" maxlength="3" required />
+    @if (!dialogForm.controls.symbol.valid) {
+    <mat-error>Symbol is invalid!</mat-error>
+    }
   </mat-form-field>
   <mat-form-field>
     <mat-label>Name</mat-label>
-    <input matInput formControlName="name" maxlength="30"/>
+    <input matInput formControlName="name" maxlength="30" required />
+    @if (!dialogForm.controls.name.valid) {
+    <mat-error>Name is invalid!</mat-error>
+    }
   </mat-form-field>
   <mat-form-field>
     <mat-label>Weight</mat-label>
-    <input matInput formControlName="weight" maxlength="10"/>
+    <input matInput formControlName="weight" maxlength="10" required />
+    @if (!dialogForm.controls.weight.valid) {
+    <mat-error>Weight is invalid!</mat-error>
+    }
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
