006--Style elements depending on element

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -2,7 +2,7 @@
   <div class="tabe__filter">
     <mat-form-field>
       <mat-label>Filter</mat-label>
-      <input matInput [formControl]="filterControl"/>
+      <input matInput [formControl]="filterControl" />
     </mat-form-field>
   </div>
   @for (row of tableRows; track $index) {
@@ -12,7 +12,7 @@
     @if (
     tile.element
     ) {
-    <div class="table__tile" [class.table__tile--highlighted]="tile | checkTile : highlightedTiles" (click)="openEditDialog(tile)">
+    <div class="table__tile" [class.table__tile--highlighted]="tile | checkTile : highlightedTiles" [ngClass]="'table__tile--' + tile.element.type | propToClass" (click)="openEditDialog(tile)">
       <span class="table__position">{{tile.element.position}}</span>
       <span class="table__symbol">{{tile.element.symbol}}</span>
       @if (!(isMobile$ | async)) {
